2015-06-10 Martin Grønholdt

* slighttp/html-response.c (http_send_response): More debug output.
* net/wifi_connect.c: Added static network REST handler.
* rest/network.c: Added file. Return the current network name.
* rest/net-names (rest_net_names_html): Return an empty JSON array while scanning.
*                                     : Added more debug output.
*									  : Changed name to rest_net_names.
*				 (rest_net_names_destroy): Renamed parameter html to response.
* rest/rest.h: Changed rest_net_names_html to rest_net_names.
*			 : Added rest_network_test, rest_network, and rest_network_destroy.
			 (rest_net_names_destroy): Renamed parameter html to response.
* rest/net-names.c (rest_net_names_test): Fixed comparison length.
* fs/connect/index.html: Implemented REST data for network selection.


2015-06-10 Martin Grønholdt (committed)

* slighttp/http-response.c (http_send_response): Changed for added size parameter to tcp_send.
* debug.c (db_alloc): Fixed debug message.
* net/tcp.c (send_buffer): Added function to send the buffer.
			(tcp_send): Buffering.
			(tcp_send): Added size paramerter.
			(tcp_sent_cb): Initialise buffer pointers.			.
			(tcp_free): Free buffer.
* net/tcp.h: Added TCP_SEND_BUFFER_SIZE.
		    (tcp_connection): Added send_buffer to struct.
		    (tcp_connection): Added current_buffer_pos to struct.
			(tcp_send): Added size paramerter.		    
* tools/ring.h: Added file.
			  : Added struct ring_buffer.
			  : Added init_ring.
			  : Added ring_push_back.
			  : Added ring_pop_front.
* tools/ring.c: Added file.
			  : Added init_ring.
			  : Added ring_push_back.
			  : Added ring_pop_front.


2015-06-09 Martin Grønholdt

* net/tcp.c (tcp_connect_cb): Set recv_callback and sent_callback.
* File system: Added atomic.js from https://github.com/toddmotto/atomic.
*			 : Added jsonhttprequest.js from https://pixelsvsbytes.com/2011/12/teach-your-xmlhttprequest-some-json/.
* fs/fs.c (fs_read): Return count.